--- a/excalidraw-app/file-menu/FileMenubar.scss
+++ b/excalidraw-app/file-menu/FileMenubar.scss
@@ -18,24 +18,31 @@
   display: flex;
   flex-direction: column;
   padding: 5px;
-  z-index: 999;
-  max-height: 150px;
+  max-height: 120px;
   overflow-y: scroll;
 }
 
-.file-menu-recent-heading {
+.file-menu-heading {
   margin: 5px 0px;
   color: var(--color-primary);
-  font-size: 1.125rem;
+  font-size: 1rem;
 }
 
 .file-node-tile {
   display: flex;
   width: 95%;
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  font-size:0.9rem;
+  color: var(--text-primary-color);
   padding: 4px;
   border: 1px solid var(--default-border-color);
   background: var(--color-surface-high);
   border-radius: 5px;
+}
+
+.file-node-spinner{
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
