--- a/excalidraw-app/file-menu/FileMenubar.scss
+++ b/excalidraw-app/file-menu/FileMenubar.scss
@@ -1,6 +1,5 @@
 @import "../../packages/excalidraw/css/variables.module.scss";
 
-
 .file-tree-container {
   width: 230px;
   min-height: 540px;
@@ -38,7 +37,7 @@
   color: var(--text-primary-color);
   padding: 4px;
   border: 1px solid var(--default-border-color);
-  background: var(--color-surface-high);
+  background: var(--color-surface-mid);
   border-radius: 5px;
   user-select: text;
 }
@@ -48,7 +47,6 @@
   height: 20px;
   margin-right: 5px;
 }
-
 
 .file-menu-search-input {
   padding-bottom: 5px;
@@ -75,4 +73,84 @@
       background: transparent;
     }
   }
+}
+
+.file-menu-tree-container {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  max-height: 550px;
+  overflow-y: scroll;
+}
+.file-menu-button {
+  padding: 0 !important;
+  background: transparent !important;
+  border: none;
+  color: var(--color-primary) !important;
+  max-width: 18px;
+  max-height: 18px;
+  cursor: pointer;
+
+  &:hover {
+    color: var(--color-accent);
+    background: var(--popup-secondary-bg-color);
+  }
+}
+
+.file-menu-folder-item-container {
+  .file-menu-folder-trigger {
+    background: var(--color-surface-mid);
+    margin: 3px 2px;
+    padding: 4px 5px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+
+    &-inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 2px 8px;
+    }
+
+    .file-menu-item-icon {
+      width: 16px;
+      color: var(--color-primary);
+    }
+
+    .file-menu-toggle-button {
+      background: transparent !important;
+      border: none;
+      color: var(--color-primary);
+      width: 18px;
+      height: 18px;
+      padding: 0px !important;
+      &:hover {
+        color: var(--color-accent);
+      }
+    }
+  }
+  .file-menu-folder-content {
+    display: flex;
+    flex-direction: column;
+  }
+  .create-folder-container {
+    height: 30px;
+    display: flex;
+  }
+}
+
+.file-menu-save-button {
+  --button-bg: var(--color-primary);
+  --button-color: var(--color-surface-lowest);
+  --button-border: var(--color-primary);
+  --button-width: var(--lg-button-size);
+  --button-height: var(--lg-button-size);
+  --button-hover-bg: var(--color-primary-darker);
+  --button-hover-border: var(--color-primary-darker);
+  --button-active-bg: var(--color-primary-darker);
+  box-shadow: 0 0 0 1px var(--color-surface-lowest);
+  flex-shrink: 0;
 }
