feat: added save file support
- Added cut and paste support to move file and folders

--- a/excalidraw-app/file-menu/FileMenubar.scss
+++ b/excalidraw-app/file-menu/FileMenubar.scss
@@ -65,7 +65,7 @@
   align-items: center;
   width: 90%;
   height: 20px;
-  background-color: #31303b;
+  background-color: var(--color-surface-mid);
   border-radius: 5px;
   border-color: var(--ExcTextField--border-active);
   margin-top: 10px;
