feat: added delete functionality and fixed small bugs

--- a/excalidraw-app/file-menu/FileMenubar.scss
+++ b/excalidraw-app/file-menu/FileMenubar.scss
@@ -47,6 +47,9 @@
     border: none;
     border-radius: 5px;
     user-select: text;
+    max-width: 100px;
+    text-overflow: ellipsis;
+    align-items: center;
   }
   .create-folder-container{
     min-height: 30px;
